--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-altair==5.5.0
 fastapi==0.115.6
-matplotlib==3.9.4
+uvicorn==0.34.0
 pandas==2.2.3
 pdfplumber==0.11.5
-pytest==8.3.4
 python-pptx==1.0.2
-tabula-py==2.10.0
-streamlit==1.41.1
-uvicorn==0.34.0
+pydantic==2.10.5
+pytest==8.3.4
 requests==2.32.3
+streamlit==1.41.1
+matplotlib==3.9.4
+seaborn==0.13.2
